correcoes no CSS

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ button {
 
 body {
   background-color: mediumseagreen;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier New, Courier, monospace;
 }
 
 main {
